src/styles/Card.css
.card {
  background: #fff;
  border: 2px solid #e0e0e0;
  border-radius: 15px;
  padding: 1.5rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  cursor: pointer;
  transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
  width: 100%;
}

.card:hover {
  transform: translateY(-10px);
  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
  border-color: #3b4cca;
}

.card img {
  width: 90%;
  height: 90%;
  object-fit: contain;
}

@media (max-widht: 600px) {
  .card {
    padding: 0.5rem;
    border-radius: 10px;
    border-width: 1.5px;
  }

  .card img {
    width: 100%;
    height: auto;
  }
}

